<resources>
    <string name="app_name">Lightning Gathering</string>
    <string name="meeting">MEETING</string>
    <string name="todo">TODO</string>
    <string name="title">TITLE</string>
    <string name="people_4_8">people 4 / 8</string>
    <string name="details">Details</string>
    <string name="member">Member</string>
    <string name="reviews">Reviews</string>
    <string name="join">JOIN</string>
    <string name="searchimage">searchBar</string>
    <string name="searchBar">검색바</string>
    <string name="name">Name</string>
    <string name="category1">Button</string>
    <string name="cartegory1">Button</string>
    <string name="category2">Button</string>
    <string name="category3">Button</string>
    <string name="category4">Button</string>
    <string name="category5">Button</string>
    <string name="category6">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="message">message</string>
    <string name="hi">hi</string>
    <string name="msg_name">msg_name</string>

    <color name="joinBtnActive">#ffd600</color>
    <color name="joinBtnNonActive">#919191</color>
    <string name="title_activity_my_page">MyPageActivity</string>
    <string name="title_activity_map_actvity">MapActvity</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="title_activity_mypage2">mypage2</string>
    <string name="id_req">아이디를 입력해주세요</string>
    <string name="pw_req">패스워드를 입력해주세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_registration">회원가입</string>
    <string name="firebase_web_client_id">718980654399-lqm9uck6rtq6okqee7oui8rmaj41kpkp.apps.googleusercontent.com</string>
    <string name="dateTitle">일시</string>
    <string name="placeTitle">장소</string>
    <string name="descriptionTitle">설명</string>
    <string name="categoryTitle">카테고리</string>
</resources>