<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="0dp"
                android:layout_toStartOf="@+id/imageView"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/searchBar" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="68dp"
                android:layout_height="44dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/icon_search"
                android:contentDescription="@string/searchimage" />

        </RelativeLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button3"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cartegory1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/category2" />

            <Button
                android:id="@+id/button6"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/category3" />

            <Button
                android:id="@+id/button7"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/category4" />

            <Button
                android:id="@+id/button8"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/category5" />

        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
