<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".GatheringDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/meeting"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/sampleImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/scene1"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/showTitle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tabs"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showPeoplenum"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/showTitle"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:text="@string/people_4_8"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sampleImage"
            android:background="@color/colorPrimary"
            app:tabTextColor="#444444"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tabs"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </RelativeLayout>

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_btn_border"
        android:text="@string/join" />

</LinearLayout>
